# cpparseopt

./: .gitignore  CMakeLists.txt  README.md
examples/: main.cpp
include/: cpparseopt.h
src/: cpparseopt.cpp
tests/: main.cpp  tests.cpp
